[gd_scene load_steps=15 format=2]

[ext_resource path="res://initializeGame.gd" type="Script" id=1]
[ext_resource path="res://paddle.gd" type="Script" id=2]
[ext_resource path="res://left_pallete.png" type="Texture" id=3]
[ext_resource path="res://right_pallete.png" type="Texture" id=4]
[ext_resource path="res://ball.gd" type="Script" id=5]
[ext_resource path="res://ball.png" type="Texture" id=6]
[ext_resource path="res://separator.png" type="Texture" id=7]
[ext_resource path="res://wall.gd" type="Script" id=8]
[ext_resource path="res://ceiling_floor.gd" type="Script" id=9]
[ext_resource path="res://ExtendedSpace.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 320, 10 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="left" type="Area2D" parent="."]
position = Vector2( 67.6285, 192.594 )
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="left"]
texture = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="left"]
shape = SubResource( 1 )

[node name="right" type="Area2D" parent="."]
position = Vector2( 563.815, 188.919 )
script = ExtResource( 2 )
ball_dir = -1

[node name="sprite" type="Sprite" parent="right"]
texture = ExtResource( 4 )

[node name="collision" type="CollisionShape2D" parent="right"]
shape = SubResource( 1 )

[node name="ball" type="Area2D" parent="."]
position = Vector2( 320.5, 191.124 )
script = ExtResource( 5 )

[node name="sprite" type="Sprite" parent="ball"]
texture = ExtResource( 6 )

[node name="collision" type="CollisionShape2D" parent="ball"]
shape = SubResource( 2 )

[node name="separator" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 7 )

[node name="left_wall" type="Area2D" parent="."]
position = Vector2( -10, 200 )
script = ExtResource( 8 )

[node name="collision" type="CollisionShape2D" parent="left_wall"]
shape = SubResource( 3 )

[node name="right_wall" type="Area2D" parent="."]
position = Vector2( 650, 200 )
script = ExtResource( 8 )

[node name="collision" type="CollisionShape2D" parent="right_wall"]
shape = SubResource( 3 )

[node name="ceiling" type="Area2D" parent="."]
position = Vector2( 320, -10 )
script = ExtResource( 9 )

[node name="collision" type="CollisionShape2D" parent="ceiling"]
shape = SubResource( 4 )

[node name="floor" type="Area2D" parent="."]
position = Vector2( 320, 410 )
script = ExtResource( 9 )
y_direction = -1

[node name="collision" type="CollisionShape2D" parent="floor"]
shape = SubResource( 4 )

[node name="ExtendedSpace" type="Panel" parent="."]
margin_left = 154.572
margin_top = 5.49045
margin_right = 494.572
margin_bottom = 111.49
script = ExtResource( 10 )

[node name="LeftPlayerName" type="Label" parent="ExtendedSpace"]
margin_left = 22.0
margin_top = 12.2262
margin_right = 122.0
margin_bottom = 42.2262
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="LeftPlayerPoints" type="Label" parent="ExtendedSpace"]
margin_left = 22.0
margin_top = 39.2262
margin_right = 72.0
margin_bottom = 69.2262

[node name="RightPlayerName" type="Label" parent="ExtendedSpace"]
margin_left = 200.0
margin_top = 13.0
margin_right = 300.0
margin_bottom = 43.0

[node name="RightPlayerPoints" type="Label" parent="ExtendedSpace"]
margin_left = 200.0
margin_top = 40.0
margin_right = 250.0
margin_bottom = 70.0

[node name="Result" type="Label" parent="ExtendedSpace"]
margin_left = 141.0
margin_top = 15.0
margin_right = 181.0
margin_bottom = 33.0

[node name="Restart" type="Button" parent="ExtendedSpace"]
margin_left = 127.357
margin_top = 76.5116
margin_right = 196.357
margin_bottom = 96.5116
[connection signal="area_entered" from="left" to="left" method="_on_area_entered"]
[connection signal="area_entered" from="right" to="right" method="_on_area_entered"]
[connection signal="area_entered" from="left_wall" to="left_wall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="right_wall" to="right_wall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="ceiling" to="ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="floor" to="floor" method="_on_area_entered"]
